--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -35,6 +35,8 @@ jobs:
         run: npm ci
 
       - name: Build static export
+        env:
+          BASE_PATH: ""
         run: npm run build
 
       - name: Upload GitHub Pages artifact
