--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -16,7 +16,7 @@ permissions:
 
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true  # cancel outdated runs on new push
 
 jobs:
   build:
@@ -28,8 +28,16 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "22"
           cache: "npm"
+
+      - name: Restore Next.js build cache
+        uses: actions/cache@v4
+        with:
+          path: .next/cache
+          key: next-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            next-${{ runner.os }}-
 
       - name: Install dependencies
         run: npm ci
@@ -37,6 +45,7 @@ jobs:
       - name: Build static export
         env:
           BASE_PATH: ""
+          SKIP_ENV_VALIDATION: "true"
         run: npm run build
 
       - name: Upload GitHub Pages artifact
